--- a/client/index.html
+++ b/client/index.html
@@ -5,11 +5,16 @@
 <meta name="description" content="Transforme seu ambiente com cortinas e persianas sob medida. Tecidos nobres, instalação profissional e garantia de 5 anos. Atendemos Cascavel e região.">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Google Tag Manager -->
-<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
-new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
-j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
-'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
-})(window,document,'script','dataLayer','GTM-T2TNT6XK');</script>
+<script>
+  // Carrega GTM só depois de 3 segundos
+  setTimeout(function() {
+    (function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+    new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+    j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+    'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+    })(window,document,'script','dataLayer','GTM-T2TNT6XK');
+  }, 3000);
+</script>
 <!-- End Google Tag Manager -->
 
  <link rel="preconnect" href="https://fonts.googleapis.com">
