--- a/client/index.html
+++ b/client/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+     <link rel="preload" as="image" href="/images/hero-bg.webp" fetchpriority="high">
     <title>Velluxe Decor - Cortinas e Persianas de Alto Padrão | Cascavel PR</title>
 <meta name="description" content="Transforme seu ambiente com cortinas e persianas sob medida. Tecidos nobres, instalação profissional e garantia de 5 anos. Atendemos Cascavel e região.">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
