--- a/client/index.html
+++ b/client/index.html
@@ -1,10 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-     <link rel="preload" as="image" href="/images/hero-bg.webp" fetchpriority="high">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Velluxe Decor - Cortinas e Persianas de Alto Padrão | Cascavel PR</title>
-<meta name="description" content="Transforme seu ambiente com cortinas e persianas sob medida. Tecidos nobres, instalação profissional e garantia de 5 anos. Atendemos Cascavel e região.">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Transforme seu ambiente com cortinas e persianas sob medida. Tecidos nobres, instalação profissional e garantia de 5 anos. Atendemos Cascavel e região.">
+    <link rel="icon" type="image/png" href="/favicon.png" />
+    
+    <link rel="preload" as="image" href="/images/hero-bg.webp" fetchpriority="high">
+    
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@300;400;600&family=Inter:wght@300;400;500;600&display=swap" rel="stylesheet">
     <!-- Google Tag Manager -->
 <script>
   // Carrega GTM só depois de 3 segundos
