--- a/client/index.html
+++ b/client/index.html
@@ -5,6 +5,13 @@
     <title>Velluxe Decor - Cortinas e Persianas de Alto Padrão | Cascavel PR</title>
 <meta name="description" content="Transforme seu ambiente com cortinas e persianas sob medida. Tecidos nobres, instalação profissional e garantia de 5 anos. Atendemos Cascavel e região.">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="preload" as="style" href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@300;400;600&family=Inter:wght@300;400;500;600&display=swap" />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@300;400;600&family=Inter:wght@300;400;500;600&display=swap" media="print" onload="this.media='all'" />
+    <noscript>
+      <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@300;400;600&family=Inter:wght@300;400;500;600&display=swap" />
+    </noscript>
     <!-- Google Tag Manager -->
 <script>
   // Carrega GTM só depois de 3 segundos
