--- a/client/index.html
+++ b/client/index.html
@@ -1,22 +1,43 @@
-<head>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+     <link rel="preload" as="image" href="/images/hero-bg.webp" fetchpriority="high">
+    <title>Velluxe Decor - Cortinas e Persianas de Alto Padrão | Cascavel PR</title>
+<meta name="description" content="Transforme seu ambiente com cortinas e persianas sob medida. Tecidos nobres, instalação profissional e garantia de 5 anos. Atendemos Cascavel e região.">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <!-- Google Tag Manager -->
+<script>
+  // Carrega GTM só depois de 3 segundos
+  setTimeout(function() {
+    (function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+    new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+    j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+    'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+    })(window,document,'script','dataLayer','GTM-T2TNT6XK');
+  }, 3000);
+</script>
+<!-- End Google Tag Manager -->
+
+ <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Velluxe Decor - Cortinas e Persianas de Alto Padrão | Cascavel PR</title>
-    <meta name="description" content="Transforme seu ambiente com cortinas e persianas sob medida. Tecidos nobres, instalação profissional e garantia de 5 anos.">
     <link rel="icon" type="image/png" href="/favicon.png" />
-    
-    <link rel="preload" as="image" href="/images/hero-bg.webp" fetchpriority="high">
-    
-    <link rel="preload" as="style" href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@300;400;600&family=Inter:wght@300;400;500;600&display=swap">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@300;400;600&family=Inter:wght@300;400;500;600&display=swap" media="print" onload="this.media='all'">
-
-    <script>
-      setTimeout(function() {
-        (function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
-        new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
-        j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
-        'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
-        })(window,document,'script','dataLayer','GTM-T2TNT6XK');
-      }, 4000);
-    </script>
+    <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@300;400;600&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:ital,wght@0,300;0,400;0,600;1,500&family=Inter:wght@300;400;500;600&display=swap" rel="stylesheet">
   </head>
+  <body>
+    <!-- Google Tag Manager (noscript) -->
+<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-T2TNT6XK"
+height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+<!-- End Google Tag Manager (noscript) -->
+
+    <div id="root"></div>
+    <script type="module" src="/src/main.tsx"></script>
+  </body>
+</html>
